# enferno-cli

./: .gitignore  LICENSE  LICENSE.txt  README.md  enferno.py  pyproject.toml  setup.py
Enferno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
enferno_cli/: __init__.py  __main__.py  cli.py
enferno_cli/core/: __init__.py  config.py  manager.py  ssh.py  task.py  templates.py
enferno_cli/tasks/: __init__.py  database.py  enferno.py  firewall.py  nginx.py  packages.py  python.py  service.py  user.py
enferno_cli/templates/: __init__.py  basic.conf  clry.service  default.conf  enferno.env  enferno.service  initial-ssl.conf  nginx.conf.j2  ssl.conf
enferno_cli/utils/: __init__.py
