[build-system]
requires = ["flit_core>=3.11.0"]
build-backend = "flit_core.buildapi"

[project]
name = "enferno_cli"
version = "0.1.0"
description = "A Python tool for setting up Ubuntu servers with the Enferno framework"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Nidal Alhariri", email = "level09@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "paramiko>=2.7.0",
    "python-dotenv>=0.19.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.950",
]

[project.scripts]
enferno = "enferno_cli.cli:main"

[project.urls]
Home = "https://github.com/level09/enferno-cli"
Documentation = "https://github.com/level09/enferno-cli#readme"
Issues = "https://github.com/level09/enferno-cli/issues"
Source = "https://github.com/level09/enferno-cli"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88 